--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>川崎ワーク</h1>
-      <img src="kawa-hime.png">
+      <img src="kawa-hime.jpg">
     
     <h2>About</h2>
     <p>
