--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>川崎ワークのポートフォリオ</title>
   </head>
   <body>
-    <h1>川崎ワーク</h1>
-      <img src="kawa-hime.jpg">
+    <h1>川崎ワーク</h1> 
+      <img src="kawa-hime.jpg" width="280">
     
     <h2>About</h2>
     <p>
