--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
 
     <h3>Profile</h3>
     <ul>
-      <li>名前（ハンドルネームも可）</li>
-      <li>所在地（県や市までで OK）</li>
-      <li>得意領域（Web 開発、サーバ運用など）</li>
+      <li>川崎ワーク</li>
+      <li>神奈川県</li>
+      <li>アニメ鑑賞</li>
     </ul>
 
     <h3>Skills</h3>
     <table>
       <tr>
         <th>OS</th>
-        <td>Windows, Ubuntu など</td>
+        <td>Windows、VBA</td>
       </tr>
       <tr>
         <th>Engine, Frameworks</th>
@@ -39,7 +39,7 @@
       </tr>
       <tr>
         <th>資格・免許</th>
-        <td>情報処理技術者、LPIC など</td>
+        <td>情報処理技術者</td>
       </tr>
     </table>
 
@@ -70,12 +70,8 @@
     <p>学歴、職歴、アルバイト、インターン経験など。</p>
     <table>
       <tr>
-        <th>2019 年</th>
-        <td><a href="https://dwango.co.jp/">株式会社ドワンゴ</a> 入社</td>
-      </tr>
-      <tr>
-        <th>2018 年</th>
-        <td>学校法人角川ドワンゴ学園 <a href="https://nnn.ed.jp/">N高等学校</a> 卒業</td>
+        <th>2025 年</th>
+        <td>ZEN大学 <a href="https://nnn.ed.jp/">N高等学校</a> 入学</td>
       </tr>
       <tr>
         <th>20XX 年</th>
