--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     
     <h2>About</h2>
     <p>
-      簡単な自己紹介やアピール。<br>
-      どんなことができる、したいのか。
+      電機メーカ企業を定年して、次のステップとしてZEN大学に入学した。<br>
+      次のテーマは、アニメとプログラムだよ。
     </p>
 
     <h3>Profile</h3>
@@ -70,6 +70,9 @@
     <p>学歴、職歴、アルバイト、インターン経験など。</p>
     <table>
       <tr>
+      　<th>2024 年</th>
+        <td>電機メーカ企業 <a href="https://nnn.ed.jp/"></a> 定年</td>
+      </tr>
         <th>2025 年</th>
         <td>ZEN大学 <a href="https://nnn.ed.jp/">N高等学校</a> 入学</td>
       </tr>
