--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <td>電機メーカ企業 <a href="https://nnn.ed.jp/"></a> 定年</td>
       </tr>
         <th>2025 年</th>
-        <td>ZEN大学 <a href="https://nnn.ed.jp/">N高等学校</a> 入学</td>
+        <td>ZEN大学 <a href="https://zen.ac.jp/">N高等学校</a> 入学</td>
       </tr>
       <tr>
         <th>20XX 年</th>
