--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </tr>
       <tr>
         <th>Tool, MiddleWare</th>
-        <td>Git, PostgreSQL など</td>
+        <td>Git, C,Ada、VBA など</td>
       </tr>
       <tr>
         <th>資格・免許</th>
@@ -74,7 +74,7 @@
         <td>電機メーカ企業 <a href="https://nnn.ed.jp/"></a> 定年</td>
       </tr>
         <th>2025 年</th>
-        <td>ZEN大学 <a href="https://zen.ac.jp/">ZEN大学</a> 入学</td>
+        <td>ZEN大学 <a href="https://zen.ac.jp/"></a> 入学</td>
       </tr>
       <tr>
         <th>20XX 年</th>
