--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     
     <h2>About</h2>
     <p>
-      電機メーカ企業を定年して、次のステップとしてZEN大学に入学した。<br>
-      次のテーマは、アニメとプログラムだよ。
+      電機メーカを定年退職して、次のステップとしてZEN大学に入学。<br>
+      新たなテーマは、アニメとプログラム。
     </p>
 
     <h3>Profile</h3>
@@ -52,8 +52,8 @@
       <li>
         作った作品
         <ul>
-          <li><a href="https://example.com/">作品 1</a></li>
-          <li><a href="https://example.com/">作品 2</a></li>
+          <li><a href="https://example.com/">作品 1【準備中】</a></li>
+          <li><a href="https://example.com/">作品 2【準備中】</a></li>
         </ul>
       </li>
     </ul>
