--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <h2>About</h2>
     <p>
-      電機メーカを定年退職して、次のステップとしてZEN大学に入学。<br>
+      電機メーカを定年して、次のステップとしてZEN大学に入学。<br>
       新たなテーマは、アニメとプログラム。
     </p>
 
