--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <ul>
       <li>川崎ワーク</li>
       <li>神奈川県</li>
-      <li>アニメ鑑賞</li>
+      <li>趣味：ガンダム、アニメ鑑賞</li>
     </ul>
 
     <h3>Skills</h3>
