--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <table>
       <tr>
         <th>OS</th>
-        <td>Windows、VBA</td>
+        <td>Windows、UNIX</td>
       </tr>
       <tr>
         <th>Engine, Frameworks</th>
