--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
       </tr>
       <tr>
         <th>Engine, Frameworks</th>
-        <td>Node.js, Express など</td>
+        <td>DEC, VAX など</td>
       </tr>
       <tr>
         <th>Tool, MiddleWare</th>
-        <td>Git, C,Ada、VBA など</td>
+        <td>BASIC, C,Ada、VBA など</td>
       </tr>
       <tr>
         <th>資格・免許</th>
